got rid of the fixed position in global css that removed scrollbar

--- a/ReMuseMe/src/styles.css
+++ b/ReMuseMe/src/styles.css
@@ -59,9 +59,4 @@ p{
     
 }
 
-.entireApp {
-    position: fixed;
-    width: 100%;
-    
-}
 
